<resources>
    <string name="app_name">Prototipo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tela_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password2">Repetir Senha</string>
    <string name="prompt_ano">Ano Nascimento</string>
    <string name="prompt_genero">Genero</string>
    <string name="prompt_profissao">Profissão</string>
    <string name="prompt_escolaridade">Escolaridade</string>
    <string name="prompt_restricao">Restrição Funcional (Ex: Paraplegia):</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tela_cadastro2">TelaCadastro2</string>
    <string name="title_activity_program">Program</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="find">Find</string>
    <string name="hint">Enter Place</string>


    <string-array name="tipo_problema">
        <item>Calçada</item>
        <item>Rebaixamento</item>
    </string-array>
    <string name="title_activity_reportar_problema">ReportarProblema</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
